@@ -1,8 +1,6 @@
 Mods: {
 	DamageVarianceSlider: {
 		Configs: {
-			Common.AcceptClientChanges: Only the host of this world can change the config! Do so in singleplayer.
-
 			Config: {
 				DisplayName: Config
 
