@@ -1,8 +1,6 @@
 Mods: {
 	DamageVarianceSlider: {
 		Configs: {
-			Common.AcceptClientChanges: Solo il proprietario del mondo può cambiare la configurazione! Fallo in giocatore singolo.
-
 			Config: {
 				DisplayName: Configurazione
 
