@@ -1,8 +1,6 @@
 Mods: {
 	DamageVarianceSlider: {
 		Configs: {
-			Common.AcceptClientChanges: Только владелец этого мира может менять настройки! Смените настройки в одиночной игре.
-
 			Config: {
 				DisplayName: Настройки
 
