@@ -18,3 +18,4 @@ Localization:
 If you want to add support for different languages, you are welcome to contribute localizations here: https://github.com/direwolf420/DamageVarianceSlider
 List of localization contributors:
 * Russian: GodHybrid
+* Italian: Sea Noodle
